Added lazy loading

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
   <div class="home_container">
     <div class="home_center_img">
-      <img class="img_responsive" src='./images/img2.jpg' alt="" />
+      <img class="img_responsive" src='./images/img2.jpg' alt="" loading="lazy" />
       <div class='content'>
         <h1>NeoDev Store</h1>
         <h6>Upto 40% off on all products</h6>
@@ -83,19 +83,19 @@
       <div class="category_grid">
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/dress.jpg' alt=""></img>
+            <img class="img_responsive" src='./images/dress.jpg' alt="" loading="lazy"></img>
             <h2 class="overlap">Dress</h2>
           </a>
         </div>
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/tshirt.jpg' alt=""></img>
+            <img class="img_responsive" src='./images/tshirt.jpg' alt="" loading="lazy"></img>
             <h2 class="overlap">Tshirt</h2>
           </a>
         </div>
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/shirtt.jpg' alt=""></img>
+            <img class="img_responsive" src='./images/shirtt.jpg' alt="" loading="lazy"></img>
             <h2 class="overlap">Shirt</h2>
           </a>
         </div>
@@ -108,7 +108,7 @@
     <div class="arrival_grid">
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt1.jpg' alt=""></img>
+          <img class="img_responsive" src='./images/tshirt1.jpg' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -118,7 +118,7 @@
       </div>
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt2.jpg' alt=""></img>
+          <img class="img_responsive" src='./images/tshirt2.jpg' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -128,7 +128,7 @@
       </div>
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt3.jpg' alt=""></img>
+          <img class="img_responsive" src='./images/tshirt3.jpg' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -139,7 +139,7 @@
 
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt4.jpg' alt=""></img>
+          <img class="img_responsive" src='./images/tshirt4.jpg' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -156,7 +156,7 @@
   </div>
   <div class="footer_icons">
     <a href="https://github.com/poojavishnoi/" target="_blank">
-      <img src='./images/github-sign.png' alt="" />
+      <img src='./images/github-sign.png' alt="" loading="lazy" />
     </a>
     <a
       href="https://www.linkedin.com/in/pooja-vishnoi-678873206/"
