Added card page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </a>
         </div>
         <div class="nav_icon">
-          <a href="#" class="nav_icon">
+          <a href="/cart.html" class="nav_icon">
               <span>
                 <i class="cart_icon fas fa-shopping-cart fa"></i>
               </span>
