--- a/wishlist.html
+++ b/wishlist.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
-  <link
+  <title>NeoDev Store</title>
+  <link rel="stylesheet" href="index.css" />
+     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-  <title>NeoDev Store</title>
 </head>
 <body>
-  <div class="homepage_container">
   <div class="navigation_main_container">
     <div class="nav_section">
       <div class="burger">
@@ -67,108 +66,83 @@
       </div>
     </div>
   </div>
-  <div class="home_container">
-    <div class="home_center_img">
-      <img class="img_responsive" src='./images/img2.jpg' alt="" loading="lazy" />
-      <div class='content'>
-        <h1>NeoDev Store</h1>
-        <h6>Upto 40% off on all products</h6>
-        <button class="primary_solid_btn btn">Shop Now</button>
-      </div>
-    </div>
-    <div class="heading">
-      <h2>CATEGORY</h2>
-    </div>
-
-      <div class="category_grid">
-        <div class="category">
-          <a href="#">
-            <img class="img_responsive" src='./images/dress.jpg' alt="" loading="lazy"></img>
-            <h2 class="overlap">Dress</h2>
-          </a>
-        </div>
-        <div class="category">
-          <a href="#">
-            <img class="img_responsive" src='./images/tshirt.jpg' alt="" loading="lazy"></img>
-            <h2 class="overlap">Tshirt</h2>
-          </a>
-        </div>
-        <div class="category">
-          <a href="#">
-            <img class="img_responsive" src='./images/shirtt.jpg' alt="" loading="lazy"></img>
-            <h2 class="overlap">Shirt</h2>
-          </a>
-        </div>
-    </div>
-
-    <div class="heading">
-      <h2>NEW ARRIVALS</h2>
-    </div>
-
-    <div class="arrival_grid">
+    
+  <div class="wishlist_container">
+  <h1>My Wishlist</h1>
+    <div class="wishlist_main_container">
       <div class="item">
-        <a href="#">
-          <img class="img_responsive" src='./images/tshirt1.jpg' alt="" loading="lazy"></img>
+        <div class="like_icon">
+        <i class="fa-solid fa fa-heart like_solid"></i>
+        </div>
+        <a href="/">
+          <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
           <p>Tshirt</p>
           <p>$30</p>
         </div>
-      </div>
-      <div class="item">
-        <a href="#">
-          <img class="img_responsive" src='./images/tshirt2.jpg' alt="" loading="lazy"></img>
-        </a>
-        <div class="item_desc">
-          <h3 class="item_desc_heading">Black Tshirt for Women</h3>
-          <p>Tshirt</p>
-          <p>$30</p>
-        </div>
-      </div>
-      <div class="item">
-        <a href="#">
-          <img class="img_responsive" src='./images/tshirt3.jpg' alt="" loading="lazy"></img>
-        </a>
-        <div class="item_desc">
-          <h3 class="item_desc_heading">Black Tshirt for Women</h3>
-          <p>Tshirt</p>
-          <p>$30</p>
+  
+        <div>
+        <button class="btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
 
       <div class="item">
-        <a href="#">
-          <img class="img_responsive" src='./images/tshirt4.jpg' alt="" loading="lazy"></img>
+        <div class="like_icon">
+        <i class="fa-solid fa fa-heart like_solid"></i>
+        </div>
+        <a href="/">
+          <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
           <p>Tshirt</p>
           <p>$30</p>
+        </div>
+  
+        <div>
+        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        </div>
+      </div>
+
+
+      <div class="item">
+        <div class="like_icon">
+        <i class="fa-solid fa fa-heart like_solid"></i>
+        </div>
+        <a href="/">
+          <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
+        </a>
+        <div class="item_desc">
+          <h3 class="item_desc_heading">Black Tshirt for Women</h3>
+          <p>Tshirt</p>
+          <p>$30</p>
+        </div>
+  
+        <div>
+        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        </div>
+      </div>
+
+      <div class="item">
+        <div class="like_icon">
+        <i class="fa-solid fa fa-heart like_solid"></i>
+        </div>
+        <a href="/">
+          <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
+        </a>
+        <div class="item_desc">
+          <h3 class="item_desc_heading">Black Tshirt for Women</h3>
+          <p>Tshirt</p>
+          <p>$30</p>
+        </div>
+  
+        <div>
+        <button class="btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
     </div>
-</div>
-
-<div class="footer_container">
-  <div>
-    <h3>Made by Pooja Vishnoi</h3>
   </div>
-  <div class="footer_icons">
-    <a href="https://github.com/poojavishnoi/" target="_blank">
-      <img src='./images/github-sign.png' alt="" loading="lazy" />
-    </a>
-    <a
-      href="https://www.linkedin.com/in/pooja-vishnoi-678873206/"
-      target="_blank"
-    >
-      <img src='./images/linkedin (1).png' alt="" />
-    </a>
-    <a href="https://twitter.com/PoojaVishnoi29" target="_blank">
-      <img src='./images/twitter-sign.png' alt="" />
-    </a>
-  </div>
-</div>
-</div>
 </body>
 </html>
