--- a/cart.html
+++ b/cart.html
@@ -71,9 +71,10 @@
 
       <div class="cart_main_container">
         <div class="cart_item">
-          <Link to="/productlist">
+          <a href="/productlist">
             <img class="img_responsive" src="images/tshirt1.jpg" alt=""></img>
-          </Link>
+          </a>
+
           <div class="item_desc">
             <h3 class="item_desc_heading">Black Tshirt for Women</h3>
             <p>Tshirt</p>
