Corrected issue of img loading,made it responsive

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
   <div class="home_container">
     <div class="home_center_img">
-      <img class="img_responsive" src='./images/img2.jpg' alt="" loading="lazy" />
+      <img class="img_responsive" src='https://images.pexels.com/photos/6348047/pexels-photo-6348047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy" />
       <div class='content'>
         <h1>NeoDev Store</h1>
         <h6>Upto 40% off on all products</h6>
@@ -83,19 +83,19 @@
       <div class="category_grid">
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/dress.jpg' alt="" loading="lazy"></img>
+            <img class="img_responsive" src='https://images.pexels.com/photos/7506739/pexels-photo-7506739.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
             <h2 class="overlap">Dress</h2>
           </a>
         </div>
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/tshirt.jpg' alt="" loading="lazy"></img>
+            <img class="img_responsive" src='https://images.pexels.com/photos/6776724/pexels-photo-6776724.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt="" loading="lazy"></img>
             <h2 class="overlap">Tshirt</h2>
           </a>
         </div>
         <div class="category">
           <a href="#">
-            <img class="img_responsive" src='./images/shirtt.jpg' alt="" loading="lazy"></img>
+            <img class="img_responsive" src='https://images.pexels.com/photos/5145180/pexels-photo-5145180.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
             <h2 class="overlap">Shirt</h2>
           </a>
         </div>
@@ -108,7 +108,7 @@
     <div class="arrival_grid">
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt1.jpg' alt="" loading="lazy"></img>
+          <img class="img_responsive" src='https://images.pexels.com/photos/7319044/pexels-photo-7319044.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -118,7 +118,7 @@
       </div>
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt2.jpg' alt="" loading="lazy"></img>
+          <img class="img_responsive" src='https://images.pexels.com/photos/3702587/pexels-photo-3702587.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -128,7 +128,7 @@
       </div>
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt3.jpg' alt="" loading="lazy"></img>
+          <img class="img_responsive" src='https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
@@ -139,7 +139,7 @@
 
       <div class="item">
         <a href="#">
-          <img class="img_responsive" src='./images/tshirt4.jpg' alt="" loading="lazy"></img>
+          <img class="img_responsive" src='https://images.pexels.com/photos/5262445/pexels-photo-5262445.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
           <h3 class="item_desc_heading">Black Tshirt for Women</h3>
