Added href link

--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,7 @@
             </a>
           </div>
           <div class="nav_icon">
-            <a href="#" class="nav_icon">
+            <a href="/wishlist.html" class="nav_icon">
                 <span>
                   <i class=" wishlist_icon fas fa-heart fa"></i>
                 </span>
@@ -72,7 +72,7 @@
       <div class="cart_main_container">
         <div class="cart_item">
           <a href="/productlist">
-            <img class="img_responsive" src="images/tshirt1.jpg" alt=""></img>
+            <img class="img_responsive" src="https://images.pexels.com/photos/7319044/pexels-photo-7319044.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></img>
           </a>
 
           <div class="item_desc">
