Changed href link

--- a/cart.html
+++ b/cart.html
@@ -55,7 +55,7 @@
             </a>
           </div>
           <div class="nav_icon">
-            <a href="/wishlist.html" class="nav_icon">
+            <a href="#" class="nav_icon">
                 <span>
                   <i class=" wishlist_icon fas fa-heart fa"></i>
                 </span>
