Added signup and login page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="nav_icons_container">
         <div class="nav_icon profile_icon">
-          <a href="#" class="nav_icon">
+          <a href="/signup.html" class="nav_icon">
               <span>
                 <i class=" fas fa-user-circle fa"></i>
               </span>
