Added product listing page

--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
 
       <div class="category_grid">
         <div class="category">
-          <a href="#">
+          <a href="/productlist.html">
             <img class="img_responsive" src='https://images.pexels.com/photos/7506739/pexels-photo-7506739.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
             <h2 class="overlap">Dress</h2>
           </a>
         </div>
         <div class="category">
-          <a href="#">
+          <a href="/productlist.html">
             <img class="img_responsive" src='https://images.pexels.com/photos/6776724/pexels-photo-6776724.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt="" loading="lazy"></img>
             <h2 class="overlap">Tshirt</h2>
           </a>
         </div>
         <div class="category">
-          <a href="#">
+          <a href="/productlist.html">
             <img class="img_responsive" src='https://images.pexels.com/photos/5145180/pexels-photo-5145180.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
             <h2 class="overlap">Shirt</h2>
           </a>
@@ -107,7 +107,7 @@
 
     <div class="arrival_grid">
       <div class="item">
-        <a href="#">
+        <a href="/productlist.html">
           <img class="img_responsive" src='https://images.pexels.com/photos/7319044/pexels-photo-7319044.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="item">
-        <a href="#">
+        <a href="/productlist.html">
           <img class="img_responsive" src='https://images.pexels.com/photos/3702587/pexels-photo-3702587.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="item">
-        <a href="#">
+        <a href="/productlist.html">
           <img class="img_responsive" src='https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
@@ -138,7 +138,7 @@
       </div>
 
       <div class="item">
-        <a href="#">
+        <a href="/productlist.html">
           <img class="img_responsive" src='https://images.pexels.com/photos/5262445/pexels-photo-5262445.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500' alt="" loading="lazy"></img>
         </a>
         <div class="item_desc">
