corrected responsive ness

--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="signup_container">
-    <h1>Login</h1>
+    <h1 class="signup_heading">Login</h1>
     <div class="form_main_container">
      
         <label class="form_label">Email:</label>
