--- a/login.html
+++ b/login.html
@@ -96,8 +96,8 @@
       </div>
      
       <button class="btn" type="submit">Login</button>
-      <button class="btn secondary_solid_btn" type="submit">Create New Account</button>
-
+      <a href='/signup.html'><button class="btn secondary_solid_btn" type="submit">Create New Account</button></a>
+    </div>
     </div>
   </div>
 </body>
