Added meta tag for author and desp

--- a/wishlist.html
+++ b/wishlist.html
@@ -12,6 +12,8 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+    <meta name="description" content="NeoDev Store">
+    <meta name="author" content="Pooja Vishnoi">
 </head>
 <body>
   <div class="navigation_main_container">
@@ -92,7 +94,7 @@
         <div class="like_icon">
         <i class="fa-solid fa fa-heart like_solid"></i>
         </div>
-        <a href="/">
+        <a href="/productlist.html">
           <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
         </a>
         <div class="item_desc">
@@ -111,7 +113,7 @@
         <div class="like_icon">
         <i class="fa-solid fa fa-heart like_solid"></i>
         </div>
-        <a href="/">
+        <a href="/productlist.html">
           <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
         </a>
         <div class="item_desc">
@@ -129,7 +131,7 @@
         <div class="like_icon">
         <i class="fa-solid fa fa-heart like_solid"></i>
         </div>
-        <a href="/">
+        <a href="/productlist.html">
           <img class="img_responsive" src="https://images.pexels.com/photos/6311599/pexels-photo-6311599.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt=""></img>
         </a>
         <div class="item_desc">
