--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,9 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+
+    <meta name="description" content="NeoDev Store">
+    <meta name="author" content="Pooja Vishnoi">
     <title>NeoDev Store</title>
   </head>
   <body>
