--- a/login.html
+++ b/login.html
@@ -12,6 +12,8 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+    <meta name="description" content="NeoDev Store">
+    <meta name="author" content="Pooja Vishnoi">
 </head>
 <body>
   <div class="navigation_main_container">
