--- a/productlist.html
+++ b/productlist.html
@@ -39,7 +39,7 @@
       </div>
       <div class="nav_icons_container">
         <div class="nav_icon profile_icon">
-          <a href="#" class="nav_icon">
+          <a href="/signup.html" class="nav_icon">
               <span>
                 <i class=" fas fa-user-circle fa"></i>
               </span>
@@ -47,7 +47,7 @@
           </a>
         </div>
         <div class="nav_icon">
-          <a href="/" class="nav_icon">
+          <a href="/cart.html" class="nav_icon">
               <span>
                 <i class="cart_icon fas fa-shopping-cart fa"></i>
               </span>
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="nav_icon">
-          <a href="#" class="nav_icon">
+          <a href="/wishlist.html" class="nav_icon">
               <span>
                 <i class=" wishlist_icon fas fa-heart fa"></i>
               </span>
