--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,9 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
+
+    <meta name="description" content="NeoDev Store">
+    <meta name="author" content="Pooja Vishnoi">
 </head>
 <body>
   <div class="navigation_main_container">
@@ -38,7 +41,7 @@
       </div>
       <div class="nav_icons_container">
         <div class="nav_icon profile_icon">
-          <a href="#" class="nav_icon">
+          <a href="/signup.html" class="nav_icon">
               <span>
                 <i class=" fas fa-user-circle fa"></i>
               </span>
