corrected the buttons

--- a/cart.html
+++ b/cart.html
@@ -83,10 +83,10 @@
             <p>Tshirt</p>
             <p>$30</p>
   
-            <button class="btn" type="submit">
+            <button class="btn primary_solid_btn" type="submit">
               Remove from cart
             </button>
-            <button class="btn secondary_outline_btn" type="submit">
+            <button class="btn secondary_solid_btn" type="submit">
               Move to wishlist
             </button>
           </div>
@@ -120,7 +120,7 @@
         <hr />
 
         <p>You will save $10 on this order</p>
-        <button class="btn">Place order</button>
+        <button class="btn primary_solid_btn">Place order</button>
       </div>
     </div>
     </div>
