--- a/productlist.html
+++ b/productlist.html
@@ -113,7 +113,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Add to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Add to cart</button>
         </div>
       </div>
 
@@ -128,7 +128,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Add to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Add to cart</button>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Add to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Add to cart</button>
         </div>
       </div>
 
@@ -158,7 +158,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Add to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Add to cart</button>
         </div>
       </div>
 
@@ -174,7 +174,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Add to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Add to cart</button>
         </div>
       </div>
     </div>
