--- a/signup.html
+++ b/signup.html
@@ -92,7 +92,7 @@
       <input class="form_input" type="checkbox"></input>
       <label class="form-label-required-field form_label"> Yes, I accept the terms</label>
       </div>
-      <button class="btn" type="submit">Create New Account</button>
+      <button class="btn primary_solid_btn" type="submit">Create New Account</button>
       <a href='/login.html'><button class="btn secondary_solid_btn">Already have an account</button></a>
     </div>
 
