--- a/wishlist.html
+++ b/wishlist.html
@@ -86,7 +86,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
 
@@ -104,7 +104,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
 
@@ -123,7 +123,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
 
@@ -141,7 +141,7 @@
         </div>
   
         <div>
-        <button class="btn wishlist_btn" type="submit">Move to cart</button>
+        <button class="btn primary_solid_btn wishlist_btn" type="submit">Move to cart</button>
         </div>
       </div>
     </div>
