--- a/login.html
+++ b/login.html
@@ -97,7 +97,7 @@
       
       </div>
      
-      <button class="btn" type="submit">Login</button>
+      <button class="btn primary_solid_btn" type="submit">Login</button>
       <a href='/signup.html'><button class="btn secondary_solid_btn" type="submit">Create New Account</button></a>
     </div>
     </div>
